# langchain-course

./: .env  .gitignore  Pipfile  README.md  callbacks.py  ingestion.py  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingection.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb
0-DataIngestParsing/data/text_files/: brta_info.txt  passport_info.txt
0-DataIngestParsing/data/word_files/: Passportfaq.docx
08. Advanced Chunking And Preprocessing Techniques/: 2. 1-semantichunking.ipynb
09. Hybrid Search Strategies/: 2. 1-densesparse.ipynb  5. 2-reranking.ipynb  7. 3-mmr.ipynb
10. Query Enhancement/: 2. 1-queryexpansion.ipynb  3. 2-querydecomposition.ipynb  4. 3-HyDE.ipynb
11. MultiModal Multi-Modal RAG/: 2. 1-multimodalopenai.ipynb
2-Vector Stores/: 25 - 1-chromadb.ipynb
backend/: core.py
